[package]
name = "kingsbur-core"
version = "0.2.2"
edition = "2021"

[dependencies]
toml = "0.8.0"
rand = "0.8.5"
regex = "1.9.4"
ring = "0.16.20"
thirtyfour = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version= "4.4.0", features=["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

[lib]
name = "core"
path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
